# barosit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.dev  README.md  Research.md  Reserch.html  barosit_qa_selfcheck_results.json  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
dist-web/: _redirects  _routes.json  desk-posture.html  desktop-auth-redirect.html  guide.html  index.html  robots.txt  science.html  sitemap.xml  turtle-neck-app.html  webcam-posture.html
docs/: BaroSit MS Store 등록.html  README.md  account-deletion-policy.html  agent-roster.md  architecture.md  auth-google-setup.md  auth-sync-plan.md  avatar-playful-movement-design.html  billing-audit-2026-07.html  blog-topics.html  changelog.md  community-roadmap.md  competitor-analysis.md  condition-aware-nudging-design.html  corporate-network-compatibility.html  deploy-pipeline.html  deployment-checklist.md  detection-algorithm.md  development.md  force-update-gate.md  go-to-market-strategy.html  ipc-reference.md  launch-readiness-plan.md  login-review.html  marketing-beta-plan.md  payment-integration-spec.md  payment-system-review.html  posture-evidence-and-reflection.md  posture-nudge-design.md  pricing-policy.md  privacy.md  project-status.md  refund.md  saas-core-blueprint.md  service-completeness.html  settings.md  staging-setup-plan.html  terms.md  timer-model.html  timer-model.md  (+6 more)
functions/: community-sitemap.xml.ts  rss.xml.ts
public/: _redirects  _routes.json  desk-posture.html  desktop-auth-redirect.html  guide.html  robots.txt  science.html  sitemap.xml  turtle-neck-app.html  webcam-posture.html
qa/: PROMPT.md  README.md  checklist.json  playbook.md  runner.mjs  사용설명서.md
scripts/: build-mac-signed.sh  build-msix.ps1  copy-functions.mjs  vendor-mediapipe.mjs
src/: App.tsx  alertConfig.ts  dataBackup.ts  ipc.ts  keepAwake.ts  launchMode.test.ts  launchMode.ts  llmConfig.ts  main.tsx  performanceConfig.ts  privacyConfig.ts  slogans.ts  styles.css  themeConfig.ts  trayI18n.ts  updateGate.ts  updater.ts  userProfile.test.ts  (+4 more)
src-tauri/: .notarize.env.example  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  llm.rs  main.rs  tray.rs
(+589 files in other folders)
