[package]
name = "barosit"
version = "0.2.3"
description = "BaroSit — 데스크톱 자세 모니터링"
authors = ["jay"]
edition = "2021"

[lib]
name = "barosit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync"] }

# macos-private-api는 macOS 전용 — 다른 OS에서 켜면 컴파일 에러
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
# 위젯 NSWindow 플래그 직접 조작용 (acceptsMouseMovedEvents 등)
objc2 = "0.5"
